--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "framer-motion": "^11.3.6",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-icons": "^5.2.1",
+    "sonner": "^1.5.0",
+    "tabler": "^1.0.0-alpha.8",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-buttons": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
