--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.166.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.6",
     "mini-svg-data-uri": "^1.4.4",
@@ -18,11 +20,13 @@
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "sonner": "^1.5.0",
     "tabler": "^1.0.0-alpha.8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-buttons": "^1.0.0"
+    "tailwindcss-buttons": "^1.0.0",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/node": "^20",
