--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.166.0",
     "clsx": "^2.1.1",
@@ -26,7 +27,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-buttons": "^1.0.0",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "@types/node": "^20",
