--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/nextjs": "^8.19.0",
     "@types/three": "^0.166.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.6",
@@ -20,7 +21,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
-    "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "sonner": "^1.5.0",
     "tabler": "^1.0.0-alpha.8",
@@ -38,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
