--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@sentry/nextjs": "^8.19.0",
     "@types/three": "^0.166.0",
     "clsx": "^2.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "framer-motion": "^11.3.6",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
