--- a/package.json
+++ b/package.json
@@ -34,15 +34,19 @@
     "three-globe": "^2.31.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
-    "eslint": "^8",
+    "eslint": "^9.9.0",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "postcss": "^8",
     "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.0.1"
   }
 }
